# pucese-libs

./: Pipfile
docs/Latex/Formato/Latex/Informes Vertical/: main.tex  make.sh
docs/Latex/Formato/Latex/Informes Vertical/Contenido/: Footer.tex  Header.tex  references.bib
docs/Latex/Formato/Latex/Informes Vertical/Preambulo/: header.tex  preambulo.tex
libs/deasy_puce/: pyproject.toml  repo.sh
libs/deasy_puce/src/deasy_puce/: __init__.py  __main__.py
libs/deasy_puce/src/deasy_puce.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
libs/deasy_puce/src/deasy_puce/distributivo/: __init__.py  distributivo.py
libs/deasy_puce/src/deasy_puce/informe/: __init__.py  informe.py
libs/deasy_puce/src/deasy_puce/latex/: __init__.py  tblr.py
